= Change Log =

== MCX v2018.12 (Ether Dome - 1.2), FangQ <q.fang (a) neu.edu> ==

 2018-12-02 [da93f29] fix a shared memory buffer length error, introduced in 9a631d15
 2018-11-24 [5e212a6]*setting separate boundary conditions at 6 boundary facets
 2018-11-24 [e6d4932] use char array for boundary condition input in mcxlab
 2018-11-23 [817609e] test if parameter has been initialized in command line
 2018-11-23 [9a631d1] offloading photonseed to sharedmem,move v back to register
 2018-11-23 [e478c37] only use the sign bit to decide detector coverage, like in the old days
 2018-11-14 [405ce9c]*add benchmark from mcxyz skinvessel example
 2018-11-13 [9a2f696] test if gpuid is 0 to avoid mcxlab crashing
 2018-11-12 [3a05df8] fix shared memory allocation size bug
 2018-11-07 [5339563] add help info for the new detphoton fields
 2018-11-07 [7e45ec0]*save initial weight and partial scattering count to match mmc output
 2018-11-07 [01ec192]*isotropic launch if srcdir(4) is -0.f, valid for all src
 2018-10-26 [183742d]*set g to 1 when mus is 0, fix #51
 2018-10-22 [0721ab4] change NULL pointer test order in reading srcpattern
 2018-10-21 [f37e0e2] prepare for nonuniform grid support
 2018-10-13 [cfa8e31]*accummulate momemtum transfer for all detected photons in replay mode
 2018-09-24 [d3df9b2] update Ruoyang Replay paper citation
 2018-09-02 [4d49f3b] add mcxstudio and mcxlab-octave deb packages
 2018-09-01 [75b3f7c]*add nightly build script to help people build mcx
 2018-08-29 [ecd4053] change deb package folder structure, handcode 1.0 keywords
 2018-08-26 [8c86b3e]*add cmake-styled makefile
 2018-08-26 [79a47bf]*remove outdated examples and flags, simplify Makefile for a clean start
 2018-08-20 [e3bb0e8] add README for mcxstudio

== MCX v2018 (Dark Matter - 1.0 Final), FangQ <q.fang (a) neu.edu> ==

 2018-08-18 [	    ] MCX 1.0 (v2018) is fully baked! create release packages
 2018-08-18 [ed0612e] add Yu2018 citation, minor gui update