@@ -7,17 +7,17 @@
 	},
 	"Forward": {
 		"T0": 0,
-		"T1": 2e-10,
-		"Dt": 2e-10
+		"T1": 5e-9,
+		"Dt": 5e-9
 	},
 	"Optode": {
 		"Source": {
-			"Pos": [-14.14213562,0,40],
-			"Dir": [0.7071067812,0.7071067812,0],
-			"Param1": [14.14213562,-14.14213562,0,18],
-			"Param2": [0,0,-15,11],
+			"Pos": [0,0,0],
+			"Dir": [0,0,1],
+			"Param1": [60,0,0,6],
+			"Param2": [0,60,0,11],
 			"Type": "pattern",
-			"SrcNum": 1,
+			"SrcNum": 3,
 			"Pattern": {
 				"Nx": 3,
 				"Ny": 6,
