@@ -1,0 +1,4 @@
+#!/bin/sh
+
+../../bin/mcx -f multipattern.json  "$@"
+
